//==========================================================================
//
// History file for EvtGen
//
//===========================================================================

3rd July 2013 Daniel Craik
     Fixed auto-install script for R01-02-00.

1st July 2013 Daniel Craik
     Added auto-install script for R01-02-00.

R01-02-00-------------------------------------------------------------------
15th May 2013 John Back
     New tag, version "1.2.0", incorporating all changes below.

14th May 2013 Michal Kreps
     Added Blatt-Weisskopf barrier factors up to L=5 in 
     EvtGenBase/EvtBlattWeisskopf::compute().

14th May 2013 John Back
     Added additional entries (appended at the end) to the evt.pdl particle 
     data file courtesy of Romulus Godang and Belle II colleagues.

14th March 2013 John Back
     Added the method EvtParticle::getPDGId() to get the PDG integer for a
     particle directly (which just calls EvtPDL::getStdHep()).
     Added a check in EvtPhotosEngine::doDecay to skip Photos if a given 
     particle has too many daughters (>= 10) to avoid a problem with a 
     hard coded upper limit in the Photos PHOENE subroutine.

2nd February 2013 Daniel Craik
     Updated EvtDalitzTable to estimate probMax when it is missing from a 
     Dalitz model.

1st  February 2013 John Back
     Added the ability to read in Pythia 6 commands in ascii decay files in
     EvtDecayTable::readDecayFile (this was already possible in xml files).
     Modified the Photos++ engine default settings to be more suited to B
     decays (from LHCb defaults).

31st January 2013 John Back
     Added the ability to read in Pythia 8 commands in ascii decay files
     in EvtDecayTable::readDecayFile. They can be set using the syntax:
     "PythiaTypeParam module:variable=value", where Type = Generic, Alias or
     Both for specifying whether the parameter is for the generic or alias
     Pythia decay engines (or both). The 2nd argument must not contain any