@@ -48,7 +48,8 @@ EvtDalitzReso::EvtDalitzReso(const EvtDalitzPlot& dp, Pair pairAng, Pair pairRes
     _g1(-1.),_g2(-1.),_coupling2(Undefined),
     _f_b(f_b), _f_d(f_d),
     _kmatrix_index(-1),_fr12prod(0.,0.),_fr13prod(0.,0.),_fr14prod(0.,0.),_fr15prod(0.,0.),_s0prod(0.),
-    _a(0.),_r(0.),_Blass(0.),_phiB(0.),_R(0.),_phiR(0.)
+    _a(0.),_r(0.),_Blass(0.),_phiB(0.),_R(0.),_phiR(0.),
+    _alpha(0.)
 {
   _vb = EvtTwoBodyVertex(_m0,_dp.m(EvtCyclic3::other(_pairRes)),_dp.bigM(),_spin); 
   _vd = EvtTwoBodyVertex(_massFirst,_massSecond,_m0,_spin);
@@ -73,7 +74,8 @@ EvtDalitzReso::EvtDalitzReso(const EvtDalitzPlot& dp, Pair pairAng, Pair pairRes
     _g1(-1.),_g2(-1.),_coupling2(Undefined),
     _f_b(0.0), _f_d(1.5),
     _kmatrix_index(-1),_fr12prod(0.,0.),_fr13prod(0.,0.),_fr14prod(0.,0.),_fr15prod(0.,0.),_s0prod(0.),
-    _a(0.),_r(0.),_Blass(0.),_phiB(0.),_R(0.),_phiR(0.)
+    _a(0.),_r(0.),_Blass(0.),_phiB(0.),_R(0.),_phiR(0.),
+    _alpha(0.)
 {
   _vb = EvtTwoBodyVertex(_m0,_dp.m(EvtCyclic3::other(_pairRes)),_dp.bigM(),_spin); 
   _vd = EvtTwoBodyVertex(_massFirst,_massSecond,_m0,_spin);
@@ -97,7 +99,8 @@ EvtDalitzReso::EvtDalitzReso(const EvtDalitzPlot& dp, Pair pairAng, Pair pairRes
     _g1(g1),_g2(g2),_coupling2(coupling2),
     _f_b(0.0), _f_d(1.5),
     _kmatrix_index(-1),_fr12prod(0.,0.),_fr13prod(0.,0.),_fr14prod(0.,0.),_fr15prod(0.,0.),_s0prod(0.),
-    _a(0.),_r(0.),_Blass(0.),_phiB(0.),_R(0.),_phiR(0.)
+    _a(0.),_r(0.),_Blass(0.),_phiB(0.),_R(0.),_phiR(0.),
+    _alpha(0.)
 {
   _vb = EvtTwoBodyVertex(_m0,_dp.m(EvtCyclic3::other(_pairRes)),_dp.bigM(),_spin);   
   _vd = EvtTwoBodyVertex(_massFirst,_massSecond,_m0,_spin);
@@ -122,7 +125,8 @@ EvtDalitzReso::EvtDalitzReso(const EvtDalitzPlot& dp, Pair pairRes, std::string 
     _g1(-1.),_g2(-1.),_coupling2(Undefined),
     _f_b(0.), _f_d(0.),
     _kmatrix_index(-1),_fr12prod(fr12prod),_fr13prod(fr13prod),_fr14prod(fr14prod),_fr15prod(fr15prod),_s0prod(s0prod),
-    _a(0.),_r(0.),_Blass(0.),_phiB(0.),_R(0.),_phiR(0.)
+    _a(0.),_r(0.),_Blass(0.),_phiB(0.),_R(0.),_phiR(0.),
+    _alpha(0.)
 {
   assert(_typeN==K_MATRIX || _typeN==K_MATRIX_I || _typeN==K_MATRIX_II);
   _spin=EvtSpinType::SCALAR;
@@ -148,7 +152,8 @@ EvtDalitzReso::EvtDalitzReso(const EvtDalitzPlot& dp, Pair pairRes,
     _g1(-1.),_g2(-1.),_coupling2(Undefined),
     _f_b(0.0), _f_d(1.5),
     _kmatrix_index(-1),_fr12prod(0.,0.),_fr13prod(0.,0.),_fr14prod(0.,0.),_fr15prod(0.,0.),_s0prod(0.),
-    _a(a),_r(r),_Blass(B),_phiB(phiB),_R(R),_phiR(phiR)
+    _a(a),_r(r),_Blass(B),_phiB(phiB),_R(R),_phiR(phiR),
+    _alpha(0.)
 {
   _spin=EvtSpinType::SCALAR;
   _vd = EvtTwoBodyVertex(_massFirst,_massSecond,_m0,_spin);
@@ -167,7 +172,8 @@ EvtDalitzReso::EvtDalitzReso(const EvtDalitzPlot& dp, EvtCyclic3::Pair pairRes, 
     _g1(-1.),_g2(-1.),_coupling2(Undefined),
     _f_b(0.), _f_d(0.),
     _kmatrix_index(-1),_fr12prod(0.,0.),_fr13prod(0.,0.),_fr14prod(0.,0.),_fr15prod(0.,0.),_s0prod(0.),
-    _a(0.),_r(0.),_Blass(0.),_phiB(0.),_R(0.),_phiR(0.)
+    _a(0.),_r(0.),_Blass(0.),_phiB(0.),_R(0.),_phiR(0.),
+    _alpha(0.)
 {
   _spin=EvtSpinType::SCALAR;
 }
@@ -189,6 +195,7 @@ EvtDalitzReso::EvtDalitzReso(const EvtDalitzReso& other)
     _fr12prod(other._fr12prod),_fr13prod(other._fr13prod),_fr14prod(other._fr14prod),_fr15prod(other._fr15prod),
     _s0prod(other._s0prod),
     _a(other._a),_r(other._r),_Blass(other._Blass),_phiB(other._phiB),_R(other._R),_phiR(other._phiR),
+    _alpha(other._alpha),
     _flatteParams(other._flatteParams)
 {}
 
@@ -203,6 +210,12 @@ EvtComplex EvtDalitzReso::evaluate(const EvtDalitzPoint& x)
 
   if (_typeN==NON_RES) 
     return EvtComplex(1.0,0.0);
+
+  if (_typeN==NON_RES_LIN)
+    return m*m;
+
+  if (_typeN==NON_RES_EXP)
+    return exp(_alpha*m*m);
 
   // do use always hash table (speed up fitting)
   if (_typeN==K_MATRIX || _typeN==K_MATRIX_I || _typeN==K_MATRIX_II)
